Wed Jul  2 00:23:22 1997  James C Hu  <jxh@polka.cs.wustl.edu>

	* HTTP_Server.{h,cpp}: Changed parsing of options to use
	  mnemonic names rather than numbers.  Added a new thread
	  strategy, THROTTLE.  This is thread-per-request until some
	  maximum number.  Unfortunately, it does not become thread-pool
	  at this point... yet :-).  Added a new option to pass in a
	  backlog value.

	* svc.conf: adjusted to account for the changed options.

	* README: changed to explain new svc.conf options.

	* JAWS_File.cpp: Changed it so that when the file is added to the
	  cache, it is also acquired.  When it is removed from the cache,
	  it is released.  This is so that the reference count is at least
	  one while the file is in the cache.

Tue Jul  1 19:13:44 1997  Nanbor Wang  <nw1@cumbia.cs.wustl.edu>

	* JAWS_File.cpp (JAWS_File): Changes the creation method of a
 	  cached copy from using plain file copy to using mmap and memcpy.
  	  This avoid the extra complexity caused by FILE_FLAG_OVERLAPPED.

Sat Jun 28 11:55:38 1997  James C Hu <jxh@tango.cs.wustl.edu>

	* HTTP_Handler.cpp (open): fixed a typo

	* HTTP_Handler.cpp (cgi): fixed a bug, strdup fails on NULL

Sat Jun 28 16:14:38 1997  Sumedh Mungee  <sumedh@cumbia.cs.wustl.edu>

	* HTTP_Handler.cpp (open): Changed socket send-buffer to 64k

Wed Jun 25 01:11:50 1997  Nanbor Wang  <nw1@dingo.wolfpack.cs.wustl.edu>

	* JAWS_File.cpp: Removed initialization of vfs_ (see below) and
	  changed all references of vfs_ to
	  JAWS_Virtual_Filesystem::instance ().  Thanks to Detlef Becker
	  <detlef.becker@med.siemens.de> for pointing this out.
	  (init): Added initialization of reference_count_ to 0.

	* JAWS_File.h: Removed private member JAWS_Virtual_Filesystem vfs_
	  since JAWS_Virtual_Filesystem is a singleton already.  Caching
	  it doesn't seem to win much and depends on the order of static
	  variables initialization, which is non-portable.

Fri Jun 13 02:42:39 1997  Nanbor Wang  <nw1@dingo.wolfpack.cs.wustl.edu>
